# feature-flag

./: README.md  index.html  package-lock.json  package.json  pyproject.toml
app/: main.py  vd.py
src/: App.tsx
src/app/: page.tsx
src/component/simulator/: BreadBoard.tsx  CodeEditor.tsx  ComponentPalette.tsx  RealBreadboard.tsx  Simulator.tsx  VirtualSerial.tsx
src/components/: ContinueWatching.tsx  CoursePogress.tsx  Header.tsx  HeroBanner.tsx  Sidebar.tsx  Statistics.tsx  YourLesson.tsx  YourMentor.tsx
src/lib/: sim-types.ts
